k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-conversion
  ## namespace: develop
  labels:
    app: currency-conversion-rest
    tags.datadoghq.com/env: "dev"
    tags.datadoghq.com/service: "currency-conversion"
    tags.datadoghq.com/version: "v1.9.6"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-conversion-rest
  template:
    metadata:
      name: currency-conversion-pod
      #annotations:
      #  ad.datadoghq.com/currency-conversion.logs: '[<LOG_CONFIG>]'      
      ## namespace: develop
      labels:
        app: currency-conversion-rest
        tags.datadoghq.com/env: "dev"
        tags.datadoghq.com/service: "currency-conversion"
        tags.datadoghq.com/version: "v1.9.6"
      #annotations:
      #  ad.datadoghq.com/currency-conversion.logs: |-
      #    [{
      #      "source": "java",
      #      "log_processing_rules": [
      #        {
      #          "type": "multi_line",
      #          "name": "log_start_with_date",
      #          "pattern": "\\d{4}-(0?[1-9]|1[012])-(0?[1-9]|[12][0-9]|3[01])"
      #        }
      #      ]
      #    }]  
               
    spec:
      containers:
      - name: currency-conversion
        #image: gcr.io/sbx-app/currency-conversion:latest
        image: hbracho/currency-conversion:v1.9.6
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: currency-conversion
  ## namespace: develop
  labels:
    app: currency-conversion-rest
spec:
  selector:
    app: currency-conversion-rest
  ports:
     - port: 8080
  type: ClusterIP #NodePort #only apply LoadBalancer or NodePort app=api-gce
